# RaveEngine-Game

./: Cargo.toml  README.md
assets/content/game/ui/: main.vuis
assets/shaders/: studs.wgsl
scripts/: bench.ps1
src/: lib.rs  main.rs
src/client/: mod.rs
src/client/player/: animation.rs  controller.rs  loader.rs
src/client/player/model/: mod.rs
src/common/: mod.rs  performance.rs  physics.rs  vrtx.rs
src/common/bricks/: mod.rs
src/common/core/: bench.rs  vrtx.rs
src/common/game/: physics.rs
src/common/game/bricks/: components.rs  data.rs
src/common/net/: components.rs  mod.rs
src/common/vuis/: api.rs  mod.rs
src/scripting/: plugin.rs
src/scripting/services/: players.rs  run_service.rs
src/scripting/userdata/: instance.rs
src/scripting/vm/: scheduler.rs
src/server/: map.rs  mod.rs  player.rs
src/studio/: bricks.rs  camera.rs  gizmos.rs  mod.rs  tools.rs  ui.rs
src/studio/ui/: assets.rs  indicator.rs  panels.rs  resources.rs  visuals.rs
src/studio/ui/panels/: context_menu.rs  explorer.rs  file.rs  mod.rs  onboarding.rs  properties.rs  settings.rs  top_bar.rs
