[package]
name = "VERTIGO-ProjectRave"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["default", "free_camera", "bevy_dev_tools"] }
bevy_egui = "0.40.1"
rand = "0.10.1"
avian3d = "0.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3